# datadev

./: .gitignore  README.md  pyproject.toml
app/: database.py  main.py
app/models/: entities.py
app/services/: auth.py  nlp_utils.py  scraping.py
app/static/: style.css
app/templates/: base.html  dashboard.html  project_detail.html  projects.html
tests/: test_scraping_service.py
