[project]
name = "web-scraping-analytics"
version = "0.1.0"
description = "Plataforma educativa de scraping y analítica"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115.0",
  "uvicorn>=0.30.0",
  "sqlmodel>=0.0.22",
  "httpx>=0.27.0",
  "beautifulsoup4>=4.12.0",
  "jinja2>=3.1.0",
  "python-multipart>=0.0.9",
  "scikit-learn>=1.5.0"
]

[project.optional-dependencies]
dev = ["pytest>=8.0.0"]

[tool.pytest.ini_options]
testpaths = ["tests"]
